force-app/main/default/objects/Vendor__c/fields/Exhausted_Budget__c.field-meta.xml
<CustomField>
    <fullName>Exhausted_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exhausted Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>