force-app/main/default/objects/Vendor__c/fields/Total_Cost_To_Company__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_To_Company__c</fullName>
    <label>Total Cost To Company</label>
    <summarizedField>Contract_Agreement__c.Contract_Cost__c</summarizedField>
    <summaryForeignKey>Contract_Agreement__c.Vendor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>