force-app/main/default/objects/Vendor__c/listViews/Active_Vendor.listView-meta.xml
<ListView>
    <fullName>Active_Vendor</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Vendor</label>
</ListView>