force-app/main/default/objects/Vendor__c/listViews/Hardware_type_Assets.listView-meta.xml
<ListView>
    <fullName>Hardware_type_Assets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Hardware</value>
    </filters>
    <label>Hardware Type Assets</label>
</ListView>