force-app/main/default/objects/Vendor__c/listViews/Human_Resources_Type_Assets.listView-meta.xml
<ListView>
    <fullName>Human_Resources_Type_Assets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Human Resources</value>
    </filters>
    <label>Human Resources Type Assets</label>
</ListView>