force-app/main/default/objects/Vendor__c/listViews/Inactive_Vendor.listView-meta.xml
<ListView>
    <fullName>Inactive_Vendor</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Inactive Vendor</label>
</ListView>