force-app/main/default/objects/Vendor__c/listViews/Software_Type_Assets.listView-meta.xml
<ListView>
    <fullName>Software_Type_Assets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Software</value>
    </filters>
    <label>Software Type Assets</label>
</ListView>